# consema

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
experiments/: experiments.py
experiments/configs/: config_oasis.csv  config_polyps.csv  config_wbc.csv
experiments/configs/thresholding/: config_polyps_threshold.csv
figures/: n01_grids.ipynb  n02_gif_maker.ipynb
notebooks/: n201_consema_wbc.ipynb  n202_consema_oasis.ipynb  n203_consema_polyps.ipynb  n301_expe_setupper.ipynb
results/results/: metrics.py  results_oasis_fixed_disk_20250227_131012.csv  results_polyps_fixed_disk_20250227_130438.csv  results_threshold_threshold_20250227_153816.csv  results_wbc_fixed_disk_20250227_125540.csv  successful_configs_config_oasis_20250227_131012.csv  successful_configs_config_polyps_20250227_130438.csv  successful_configs_config_polyps_threshold_20250227_153816.csv  successful_configs_config_wbc_20250227_125540.csv
src/benchmarkerie/: datasets.py  models.py
src/conosco/: morphology.py  plots.py
src/consema/: conformal.py  morphology.py
